--- a/Learning Pandas.ipynb
+++ b/Learning Pandas.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "cf4d94c9",
+   "execution_count": 89,
+   "id": "06bf4c30",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "[602 rows x 4 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,22 +143,32 @@
     "\n",
     "conditions = [\"confirmed\", \"deaths\", \"recovered\"]\n",
     "\n",
-    "def make_global_df(condition):\n",
-    "    df = pd.read_csv(f\"data/time_{condition}.csv\")\n",
-    "    df = df.drop([\"Province/State\", \"Country/Region\", \"Lat\", \"Long\"], axis=1).sum().reset_index(name=f\"{condition}\")\n",
-    "    df = df.rename(columns={\"index\":\"date\"})\n",
-    "    return df\n",
-    "\n",
-    "final_df = None\n",
-    "for condition in conditions:\n",
-    "    df = make_global_df(condition)\n",
-    "    if final_df is None:\n",
-    "        final_df = df\n",
-    "    else:\n",
-    "        final_df = final_df.merge(df)\n",
-    "\n",
-    "final_df"
+    "def make_global_df():\n",
+    "    def make_df(condition):\n",
+    "        df = pd.read_csv(f\"data/time_{condition}.csv\")\n",
+    "        df = df.drop([\"Province/State\", \"Country/Region\", \"Lat\", \"Long\"], axis=1).sum().reset_index(name=f\"{condition}\")\n",
+    "        df = df.rename(columns={\"index\":\"date\"})\n",
+    "        return df\n",
+    "    final_df = None\n",
+    "    for condition in conditions:\n",
+    "        df = make_df(condition)\n",
+    "        if final_df is None:\n",
+    "            final_df = df\n",
+    "        else:\n",
+    "            final_df = final_global_df.merge(df)\n",
+    "    return final_df\n",
+    "        \n",
+    "global_df = make_global_df()\n",
+    "global_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eab93186",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
